--- a/css/sass/global.scss
+++ b/css/sass/global.scss
@@ -14,6 +14,7 @@ body:not(.elementor-editor-active) {
 }
 
 body {
+	border: 2px solid red;
 	overflow-x: hidden;
 	h1, h1.elementor-heading-title,
 	h2, h2.elementor-heading-title,
