--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body:not(.elementor-editor-active) {
 }
 
 body {
-  border: 2px solid red;
+  border: 2px solid green;
   overflow-x: hidden;
 }
 body h1, body h1.elementor-heading-title,
